--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,8 @@
   <!-- Angular Libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-sanitize.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
 
+  <!-- Moment.js libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.2/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.2.0/angular-moment.min.js"></script>
 
@@ -17,6 +15,7 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 
+  <!-- app stylesheet and scripts -->
   <script src="/js/app.js"></script>
   <link rel="stylesheet" href="/css/style.css" />
 
@@ -25,9 +24,10 @@
 </head>
 
 <body ng-app="MyApp">
+  
   <h1>The Food Events</h1>
 
-  <p>This app makes it easy to find food events listed on meetup.com. Food terms <span class='red'>('food', 'pizza', 'snacks', 'appetizer', 'lunch', 'dinner')</span> in the description are highlighted in <span class='red'>red</span>.</p>
+  <p>This app makes it easy to find food events listed on meetup.com. Food terms <span class='red'>('food', 'pizza', 'snacks', 'appetizer', 'lunch', 'dinner', 'tacos')</span> in the description are highlighted in <span class='red'>red</span>.</p>
 
   <div ng-controller="MeetupCtrl">
     <div ng-repeat="meetup in meetups">
