--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,10 @@
 
   <p>This app makes it easy to find food events listed on meetup.com. Food terms <span class='red'>('food', 'pizza', 'snacks', 'appetizer', 'lunch', 'dinner', 'tacos')</span> in the description are highlighted in <span class='red'>red</span>.</p>
 
+  Specific terms to filter: <input ng-model="searchtxt" type="text" placeholder="filter terms">
+
   <div ng-controller="MeetupCtrl">
-    <div ng-repeat="meetup in meetups">
+    <div ng-repeat="meetup in meetups | filter : searchtxt" ng-bind-html="meetup.description | highlight:searchtxt">
       <hr>
       <h4>{{meetup.datetime}}</h4>
       <hr>
