search layout tweaks + BBQ

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
 
   <h1>The Food Events</h1>
 
-  <p>This app makes it easy to find food events listed on meetup.com. Food terms <span class='red'>('food', 'pizza', 'snacks', 'appetizer', 'lunch', 'dinner', 'tacos')</span> in the description are highlighted in <span class='red'>red</span>.</p>
+  <p>This app makes it easy to find food events listed on meetup.com. Food terms <span class='red'>('food', 'pizza', 'snacks', 'appetizer', 'lunch', 'dinner', 'tacos', 'BBQ')</span> in the description are highlighted in <span class='red'>red</span>.</p>
 
-  <fieldset>
-    <p>Specific terms to filter: <input ng-model="searchtxt" type="text" placeholder="Search..."></p>
-  </fieldset>
+  <div>
+    <p>Filter Meetup list further: <input ng-model="searchtxt" type="text" placeholder="Search..."></p>
+  </div>
 
   <div ng-controller="MeetupCtrl">
     <div ng-repeat="meetup in meetups | filter : searchtxt">
